--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,13 @@ pymc = "^5.16.2"
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.2"
 
+
+[tool.poetry.group.demo.dependencies]
+matplotlib = "^3.9.2"
+seaborn = "^0.13.2"
+arviz = "^0.19.0"
+ipykernel = "^6.29.5"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
