--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = ">=3.10,<3.13"
 numpy = ">=1.17.0,<2"
 pymc = "^5.16.2"
+scipy = "^1.14.1"
 
 
 [tool.poetry.group.dev.dependencies]
