--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = ">=3.10,<3.13"
 numpy = ">=1.17.0,<2"
 pymc = "^5.16.2"
 scipy = "^1.14.1"
+arviz = "^0.19.0"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -19,8 +20,8 @@ pytest = "^8.3.2"
 [tool.poetry.group.demo.dependencies]
 matplotlib = "^3.9.2"
 seaborn = "^0.13.2"
-arviz = "^0.19.0"
 ipykernel = "^6.29.5"
+graphviz = "^0.20.3"
 
 [build-system]
 requires = ["poetry-core"]
