--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ numpy = ">=1.17.0,<2"
 pymc = "^5.16.2"
 scipy = "^1.14.1"
 arviz = "^0.19.0"
+requests = "^2.32.3"
+pandas = "^2.2.2"
 
 
 [tool.poetry.group.dev.dependencies]
