--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,31 +1,27 @@
-[tool.poetry]
+[project]
 name = "vaxflux"
 version = "0.1.0"
-description = ""
-authors = ["Timothy Willard <9395586+TimothyWillard@users.noreply.github.com>"]
+description = "Add your description here"
 readme = "README.md"
+requires-python = ">=3.10,<3.13"
+dependencies = [
+    "numpy >=1.17.0,<2",
+    "pymc ~=5.16.2",
+    "scipy ~=1.14.1",
+    "arviz ~=0.19.0",
+    "requests ~=2.32.3",
+    "pandas ~=2.2.2"
+]
 
-[tool.poetry.dependencies]
-python = ">=3.10,<3.13"
-numpy = ">=1.17.0,<2"
-pymc = "^5.16.2"
-scipy = "^1.14.1"
-arviz = "^0.19.0"
-requests = "^2.32.3"
-pandas = "^2.2.2"
-
-
-[tool.poetry.group.dev.dependencies]
-pytest = "^8.3.2"
-black = {extras = ["jupyter"], version = "^24.8.0"}
-
-
-[tool.poetry.group.demo.dependencies]
-matplotlib = "^3.9.2"
-seaborn = "^0.13.2"
-ipykernel = "^6.29.5"
-graphviz = "^0.20.3"
-
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+[project.optional-dependencies]
+demo = [
+    "matplotlib ~=3.9.2",
+    "seaborn ~=0.13.2",
+    "ipykernel ~=6.29.5",
+    "graphviz ~=0.20.3",
+    "jupyter>=1.1.1",
+]
+dev = [
+    "pytest ~=8.3.2",
+    "black[jupyter] >=24.8.0"
+]
