--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,8 @@ dependencies = [
     "scipy ~=1.14.1",
     "arviz ~=0.19.0",
     "requests ~=2.32.3",
-    "pandas ~=2.2.2"
+    "pandas ~=2.2.2",
+    "xarray>=2024.7.0",
 ]
 
 [project.optional-dependencies]
