--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,6 @@ demo = [
 [tool.uv]
 dev-dependencies = [
     "black[jupyter]>=24.8.0",
-    "pylint>=3.3.2",
     "pytest>=8.3.2",
+    "ruff>=0.9.4",
 ]
