--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,4 +31,5 @@ dev-dependencies = [
     "pytest>=8.3.2",
     "ruff>=0.9.4",
     "scipy-stubs>=1.15.1.0",
+    "types-requests>=2.32.0.20241016",
 ]
