--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,9 +35,12 @@ dev-dependencies = [
 
 [tool.ruff.lint]
 select = [
+    "D",  # Docstring
     "PL", # Pylint
 ]
 ignore = [
+    "D203",    # 1 blank line required before class docstring
+    "D212",    # Multi-line docstring summary should start at the first line
     "PLR2004", # Consider replacing magic number with a constant variable
 ]
 
