--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "requests ~=2.32.3",
     "pandas ~=2.2.2",
     "xarray>=2024.7.0",
+    "pydantic>=2.10.6",
 ]
 
 [project.optional-dependencies]
