--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ readme = "README.md"
 requires-python = ">=3.10,<3.13"
 dependencies = [
     "numpy >=1.17.0,<2",
-    "pymc ~=5.16.2",
+    "pymc >5.16.2",
     "scipy ~=1.14.1",
     "arviz ~=0.19.0",
     "requests ~=2.32.3",
