--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,22 +5,22 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10,<3.13"
 dependencies = [
-    "numpy >=1.17.0,<2",
-    "pymc >5.16.2",
-    "scipy ~=1.14.1",
-    "arviz ~=0.19.0",
-    "requests ~=2.32.3",
-    "pandas ~=2.2.2",
+    "numpy>=1.17.0,<2",
+    "pymc>5.16.2",
+    "scipy>=1.14.1",
+    "arviz>=0.19.0",
+    "requests>=2.32.3",
+    "pandas>=2.2.2",
     "xarray>=2024.7.0",
     "pydantic>=2.10.6",
 ]
 
 [project.optional-dependencies]
 demo = [
-    "matplotlib ~=3.9.2",
-    "seaborn ~=0.13.2",
-    "ipykernel ~=6.29.5",
-    "graphviz ~=0.20.3",
+    "matplotlib>=3.9.2",
+    "seaborn>=0.13.2",
+    "ipykernel>=6.29.5",
+    "graphviz>=0.20.3",
     "jupyter>=1.1.1",
 ]
 
