Add 'FLY', 'I', 'NPY', and 'PD' lint rules
Added several new linting rules for ruff to check. The pandas rules in
particular required several updates throughout the code base.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,9 +36,13 @@ dev-dependencies = [
 
 [tool.ruff.lint]
 select = [
-    "D",  # Docstring
-    "F",  # Pyflakes
-    "PL", # Pylint
+    "FLY", # Flynt
+    "I",   # Isort
+    "NPY", # Numpy
+    "PD",  # Pandas
+    "D",   # Docstring
+    "F",   # Pyflakes
+    "PL",  # Pylint
 ]
 ignore = [
     "D203",    # 1 blank line required before class docstring
