Add 'E', 'W', and 'UP' ruff checks
Added pycodestyle errors and warnings to ruff checking as well as
pyupgrade. Minor changes were required for pyupgrade check.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,9 +42,12 @@ select = [
     "PD",   # Pandas
     "N",    # PEP8 Naming
     "PERF", # Perflint
+    "E",    # Pycodestyle Errors
+    "W",    # Pycodestyle Warnings
     "D",    # Docstring
     "F",    # Pyflakes
     "PL",   # Pylint
+    "UP",   # Pyupgrade
 ]
 ignore = [
     "D203",    # 1 blank line required before class docstring
