--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,8 @@ select = [
     "F",    # Pyflakes
     "PL",   # Pylint
     "UP",   # Pyupgrade
+    "FURB", # Refurb
+    "RUF",  # Ruff
 ]
 ignore = [
     "D203",    # 1 blank line required before class docstring
