--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,7 @@ jobs:
         uses: astral-sh/setup-uv@v5
         with:
           enable-cache: true
+          cache-dependency-glob: 'pyproject.toml'
           python-version: ${{ matrix.python-version }}
       - name: Install package and dependencies
         run: |
