--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
           - '3.10'
           - '3.11'
           - '3.12'
-          - '3.13'
+          # - '3.13' # Temporarily disabled due to numpy not having pre-built wheels
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
