--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@ name = "vaxflux"
 version = "0.1.0"
 description = "Flexible bayesian models for seasonal vaccine uptake."
 readme = "README.md"
+license = { text = "MIT" }
 requires-python = ">=3.10"
 dependencies = [
     "numpy>=1.17.0,<2",
