--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,15 +28,7 @@ jobs:
           enable-cache: true
           cache-dependency-glob: 'pyproject.toml'
           python-version: ${{ matrix.python-version }}
-      - name: Install package and dependencies
-        run: |
-          uv sync --all-extras
-          uv pip install -e .
-      - name: Check formatting/linting with ruff
-        run: |
-          uv run ruff format --check
-          uv run ruff check --no-fix
-      - name: Check types with mypy
-        run: uv run mypy --python-version ${{ matrix.python-version }} .
-      - name: Run unit tests with pytest
-        run: uv run pytest --exitfirst
+      - name: Run Checks
+        run: make ci
+        env:
+          UV_PYTHON_VERSION: "${{ matrix.python-version }}"
