--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
       - name: Setup uv with python ${{ matrix.python-version }}
-        uses: astral-sh/setup-uv@v5
+        uses: astral-sh/setup-uv@v6
         with:
           enable-cache: true
           cache-dependency-glob: 'pyproject.toml'
@@ -31,4 +31,4 @@ jobs:
       - name: Run Checks
         run: make ci
         env:
-          UV_PYTHON_VERSION: "${{ matrix.python-version }}"
+          UV_PYTHON_VERSION: ${{ matrix.python-version }}
