--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ dev-dependencies = [
     "pytest>=8.3.2",
     "ruff>=0.9.4",
     "scipy-stubs>=1.15.1.0",
+    "sphinx>=8.1.3",
     "types-requests>=2.32.0.20241016",
 ]
 
