--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ demo = [
 dev-dependencies = [
     "mypy>=1.14.1",
     "pandas-stubs>=2.2.3.241126",
+    "pydata-sphinx-theme>=0.16.1",
     "pytest>=8.3.2",
     "ruff>=0.9.4",
     "scipy-stubs>=1.15.1.0",
