--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ dev-dependencies = [
     "pandas-stubs>=2.2.3.241126",
     "pydata-sphinx-theme>=0.16.1",
     "pytest>=8.3.2",
+    "rstcheck[sphinx]>=6.2.4",
     "ruff>=0.9.4",
     "scipy-stubs>=1.15.1.0",
     "sphinx>=8.1.3",
