--- a/pyproject.toml
+++ b/pyproject.toml
@@ -75,3 +75,8 @@ max-args = 8  # Default is 5
 [[tool.mypy.overrides]]
 module = ["pymc.*"]
 ignore_missing_imports = true
+
+[tool.rstcheck]
+ignore_directives = [
+    "automodule",
+]
