--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,12 @@ demo = [
     "jupyter>=1.1.1",
 ]
 
+[tool.pytest.ini_options]
+testpaths = [
+    "src/vaxflux/",
+    "tests/",
+]
+
 [tool.uv]
 dev-dependencies = [
     "mypy>=1.14.1",
@@ -45,25 +51,31 @@ docstring-code-line-length = 72
 
 [tool.ruff.lint]
 select = [
-    "FLY",  # Flynt
-    "I",    # Isort
-    "NPY",  # Numpy
-    "PD",   # Pandas
-    "N",    # PEP8 Naming
-    "PERF", # Perflint
-    "E",    # Pycodestyle Errors
-    "W",    # Pycodestyle Warnings
-    "D",    # Docstring
-    "F",    # Pyflakes
-    "PL",   # Pylint
-    "UP",   # Pyupgrade
-    "FURB", # Refurb
-    "RUF",  # Ruff
+    "ALL",
 ]
 ignore = [
+    "COM812",  # Missing trailing comma, not needed when used with the formatter
     "D203",    # 1 blank line required before class docstring
     "D212",    # Multi-line docstring summary should start at the first line
     "PLR2004", # Consider replacing magic number with a constant variable
+]
+
+[tool.ruff.lint.flake8-annotations]
+allow-star-arg-any = true
+
+[tool.ruff.lint.mccabe]
+max-complexity = 12  # Default is 10
+
+[tool.ruff.lint.per-file-ignores]
+"docs/**/*" = [
+    "INP001", # Implicit namespace package
+]
+"misc/**/*" = [
+    "INP001", # Implicit namespace package
+]
+"tests/**/*" = [
+    "INP001", # Implicit namespace package
+    "S101",   # Use of `assert` detected
 ]
 
 [tool.ruff.lint.pydocstyle]
