Add `CHANGES.md` change log
Added a change log to track package changes over time and incorporated
the change log into the sphinx documentation build.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+      - name: Setup pandoc for docs
+        uses: r-lib/actions/setup-pandoc@v2
       - name: Setup uv with python ${{ matrix.python-version }}
         uses: astral-sh/setup-uv@v6
         with:
